--- a/chickens.html
+++ b/chickens.html
@@ -5,73 +5,109 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ニワトリ - Coltipedia</title>
-	<!--link rel="stylesheet" href="css/style.css"-->
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<h1>ニワトリ</h1>
-	<!-- alt属性はアクセシビリティ（テキストリーダー対応）に配慮して記述した方が望ましい -->
-	<img src="pictures/chicken.png" alt="ニワトリの画像">
-
-	<a href="https://google.com/" target="_blank">ここはGoogleへのリンクです(別タブで開きます)</a>
-	<a href="about.html">About</a>
-
-	<p><b>ニワトリ</b>（鶏、庭鳥、学名：Gallus gallus domesticus）は、<a href="https://ja.wikipedia.org/wiki/%E3%82%AD%E3%82%B8%E7%A7%91">キジ科</a>に属する鳥類の1種で、代表的な家禽として世界中で飼育されている。ニワトリを飼育することを養鶏と呼ぶ。</p>
-
-	<p>
-		ニワトリという和名は「庭に飼う鳥」、つまり家禽という意味から名づけられた[3]。ニワトリは普通「鶏」と書かれるが、
-		「家鶏」で「にわとり」と充てることもある[4]。ニワトリは古くはカケ（鶏）と呼ばれた[4]。代表的な鳥であるため、
-		単に「とり」ともよばれる[5]。雄のニワトリは「雄鶏（牡鶏）」（おんどり）、雌のニワトリは「雌鶏（牝鶏）」（めんどり）
-		と呼ばれる[4][5]。
-	</p>
-
-	<h2>名称</h2>
-	<h3>英語</h3>
-	<h4>先史・古代のニワトリ</h4>
-	<h4>中世・近世のニワトリ</h4>
-	<h5>私はh5</h5>
-	<h6>わたしはh6</h6>
-	<!-- "lorem"と打ちTabキーを押すと編集作業などでよく使われる意味のないダミーテキストのテンプレートが自動補完される-->
-	<!-- "lorem*5"のように書いてTab補完で、ダミーテンプレート文が5つ分埋められる-->
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam assumenda a recusandae harum fugiat sit
-		sapiente
-		illum, provident, in qui quas, dolorum nisi voluptate sint minima necessitatibus accusantium incidunt
-		voluptatem?
-	</p>
-
-	<h2>生態・形態上の特徴</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime nesciunt sit saepe recusandae assumenda harum
-		corrupti perferendis aliquid omnis provident delectus dignissimos, cupiditate ipsam nobis ipsum quo ipsa illum
-		earum!
-		Hic dignissimos totam excepturi voluptatum iure consequuntur! Deserunt voluptatibus officiis sequi porro
-		laboriosam
-		id perspiciatis ipsum error possimus! Sapiente odio ullam minima dignissimos possimus amet quibusdam cum
-		delectus
-		fuga eligendi.
-		Aspernatur sapiente sequi reiciendis a nostrum consectetur consequuntur quia distinctio. Similique quae, minus
-		ipsum
-		tempore quasi officiis natus, a possimus aspernatur explicabo assumenda molestias reprehenderit dolor atque
-		temporibus aliquid impedit!
-		Similique asperiores ullam, qui dolor culpa sequi iusto magnam mollitia vel quibusdam fugiat repellat nihil modi
-		officia quidem doloribus, in tempore, totam natus voluptates placeat. Aut autem quibusdam doloremque repellat.
-		Blanditiis perferendis ducimus ipsa iste magnam assumenda culpa dolorem repudiandae, aspernatur veniam
-		similique,
-		eligendi unde, ipsam cum maxime. Obcaecati distinctio sit qui ea velit labore ad quis quasi dolor quidem.</p>
-	<h2>品種</h2>
-	<ol>
-		<li>軍鶏グループ</li>
+	<nav>
 		<ul>
-			<li>大軍鶏</li>
-			<!-- MacではShift+Option+カーソルキーの下で現在行のコピーを押した回数分簡単に増やせる-->
-			<li>小軍鶏</li>
+			<li><a href="home">ホームへ</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="contact">コンタクト</a></li>
 		</ul>
-		<li>地鶏グループ</li>
+	</nav>
+	<main>
+		<h1>ニワトリ</h1>
+		<hr>
+		<p>
+			雨ニモマケズ<br>
+			風ニモマケズ<br>
+			雪ニモ夏ノ暑サニモマケヌ<br>
+			丈夫ナカラダヲモチ<br>
+			慾ハナク<br>
+			決シテ瞋ラズ<br>
+			イツモシヅカニワラッテヰル
+		</p>
+
+		<!-- alt属性はアクセシビリティ（テキストリーダー対応）に配慮して記述した方が望ましい -->
+		<img src="pictures/chicken.png" alt="ニワトリの画像">
+		<hr>
+		<a href="https://google.com/" target="_blank">ここはGoogleへのリンクです(別タブで開きます)</a>
+		<a href="about.html">About</a>
+
+		<p><b>ニワトリ</b>（鶏、庭鳥、学名：Gallus gallus domesticus）は、<a
+				href="https://ja.wikipedia.org/wiki/%E3%82%AD%E3%82%B8%E7%A7%91">キジ科</a>に属する鳥類の1種で、代表的な家禽として世界中で飼育されている。ニワトリを飼育することを養鶏と呼ぶ。
+		</p>
+
+		<p>
+			ニワトリという和名は「庭に飼う鳥」、つまり家禽という意味から名づけられた<sup><a href="https://example.com">[3]</a></sup>。ニワトリは普通「鶏」と書かれるが、
+			「家鶏」で「にわとり」と充てることもある<sup>[4]</sup>。ニワトリは古くはカケ（鶏）と呼ばれた<sup>[4]</sup>。代表的な鳥であるため、
+			単に「とり」ともよばれる[5]。雄のニワトリは「雄鶏（牡鶏）」（おんどり）、雌のニワトリは「雌鶏（牝鶏）」（めんどり）
+			と呼ばれる[4][5]。
+		</p>
+
+		<h2>名称</h2>
+		<h3>英語</h3>
+		<h4>先史・古代のニワトリ</h4>
+		<h4>中世・近世のニワトリ</h4>
+		<h5>私はh5</h5>
+		<h6>わたしはh6</h6>
+		<!-- "lorem"と打ちTabキーを押すと編集作業などでよく使われる意味のないダミーテキストのテンプレートが自動補完される-->
+		<!-- "lorem*5"のように書いてTab補完で、ダミーテンプレート文が5つ分埋められる-->
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam assumenda a recusandae harum fugiat sit
+			sapiente
+			illum, provident, in qui quas, dolorum nisi voluptate sint minima necessitatibus accusantium incidunt
+			voluptatem?
+		</p>
+		<section>
+			<h2>生態・形態上の特徴</h2>
+			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt officia minus accusamus repellat,
+				cupiditate eaque nulla! Sint eveniet expedita minima quas rem nihil temporibus, impedit laboriosam
+				possimus cum tempore placeat?
+				Quo quas architecto facilis amet in voluptatum ab, omnis numquam sunt laudantium reprehenderit sed
+				eligendi unde asperiores? Officia minima repudiandae nemo quas velit! Earum nihil quos quas dolore
+				corrupti assumenda.
+				At harum, magni rem necessitatibus recusandae minima officiis quisquam molestias tempore facere! Facere
+				nulla ipsam illum quam sint, fugit voluptate laudantium totam aliquid ducimus voluptas architecto culpa
+				saepe amet vero.
+			</p>
+		</section>
+
+		<h2>品種</h2>
+		<ol>
+			<li>軍鶏グループ</li>
+			<ul>
+				<li>大軍鶏</li>
+				<!-- MacではShift+Option+カーソルキーの下で現在行のコピーを押した回数分簡単に増やせる-->
+				<li>小軍鶏</li>
+			</ul>
+			<li>地鶏グループ</li>
+			<ul>
+				<li>土佐地鶏</li>
+				<li>三重地鶏</li>
+			</ul>
+		</ol>
+		<img
+			src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Chicks_of_many_breeds.tif/lossy-page1-440px-Chicks_of_many_breeds.tif.jpg">
+		<p>上付き文字&lt;sup&gt;(super)、下付き文字&lt;sub&gt;</p>
+		<h2>a<sup>2</sup> 2<sup>1</sup>/<sub>2</sub> H<sub>2</sub>O</h2>
+		<a href="https://html.spec.whatwg.org/multipage/named-characters.html">エンティティコード(&で始まり;で終わる特殊な文字や記号)一覧</a>
+		<p>&#9824; &#x02660; &spades; &spadesuit;<br> <!--同じ記号でも16進数など何通りも記法がある-->
+			&#x022FD; &#x021D4; &copy; &#x000A9; &copysr; &#x02117; &reg; &#x000AE; &trade; &#x02122; <br>
+			&para; &#x000B6; &sect; &#x000A7; &euro; &#x020AC; &cent; &#x000A2; &pound; &#x000A3; &curren; &#x000A4;<br>
+			&yen; &#x000A5; &brvbar; &#x000A6; &uml; &#x000A8; &die; &#x000A8; &macr; &#x000AF;</p>
+
+	</main>
+	<hr>
+	<footer>
+		<p class="copyright" name="copyright">&copy; 2023 Coltipedia
+			このページを無断で複製・転載することを禁じます。
+		</p>
 		<ul>
-			<li>土佐地鶏</li>
-			<li>三重地鶏</li>
+			<li><a href="contact">コンタクト</a></li>
+			<li><a href="help">ヘルプ</a></li>
 		</ul>
-	</ol>
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Chicks_of_many_breeds.tif/lossy-page1-440px-Chicks_of_many_breeds.tif.jpg">
+	</footer>
 </body>
 
 </html>
