form要素 input, label

--- a/03_HTML_Forms_Tables/heaviest_birds.html
+++ b/03_HTML_Forms_Tables/heaviest_birds.html
@@ -51,7 +51,7 @@
 	</table>
 
 	<h2>V2</h2>
-	<!-- 本来border="1"はCSSで指定するのが一般的 -->
+	<!-- 本来borderは「見え方」の設定なのでCSSで指定するのが一般的 -->
 	<table border="1">
 		<!-- <thead>はヘッダーが2行以上の場合のグルーピングに特に有用(CSSの適用範囲やアクセシビリティ等)-->
 		<thead>
@@ -65,7 +65,6 @@
 				<th>lb</th>
 		</thead>
 		<tbody>
-			<!--普段から tr>td*4などemmet記法に慣れておく-->
 			<tr>
 				<td>Common ostrich</td>
 				<td>104</td>
@@ -94,5 +93,4 @@
 	</table>
 
 </body>
-
 </html>
