update: formsを1と2に分離

--- a/03_HTML_Forms_Tables/forms1.html
+++ b/03_HTML_Forms_Tables/forms1.html
@@ -62,7 +62,7 @@
 		<input type="week"><!--週番号（あまり出番無さそう）-->
 
 		<hr>
-		フォーム全体の挙動に影響するボタン
+		フォーム全体の挙動に影響するボタン(見た目がボタン型のinput要素)<br>
 		<input type="submit" value="指定の送り先にhttpリクエストを送信決定">
 		<input type="reset" value="フォームの入力値を初期状態に戻す">
 
