--- a/03_HTML_Forms_Tables/forms2.html
+++ b/03_HTML_Forms_Tables/forms2.html
@@ -12,33 +12,42 @@
 
 	<form action="/tacos">
 		<p>
-			<!--label要素は単なる説明でなく、機能的にinput要素と関連付けられる-->
 			<label for="username">ユーザー名：</label>
-			<input id="username" placeholder="ユーザー名">
+			<input id="username" placeholder="ユーザー名" name="username">
 		</p>
 		<p>
 			<label for="password">パスワード：</label>
-			<input id="password" type="password" placeholder="パスワード">
+			<input id="password" type="password" placeholder="パスワード" name="password">
 		</p>
 		<p>
 			<label for="color">好きな色：</label>
-			<input id="color" type="color">
+			<input id="color" type="color" name="color">
 		</p>
 		<p>
-			<!--labelとinput要素は以下のような形でも関連付け可能-->
 			<label>好きな数値：
-				<input type="number" placeholder="数字を入力">
+				<input type="number" placeholder="数字を入力" name="num">
 			</label>
 		</p>
-
-		<h3>input要素のボタン型とbutton要素</h3>
-		<!--<button>要素は標準で<button type="submit">-->
 		<button>送信</button>
-		<!--以下と機能は同じ-->
-		<input type="submit">
-		<button>送信じゃ！！！</button>
-		<input type="submit" value="送信じゃ！！！">
+	</form>
 
+	<hr>
+
+	<h2>ハイジャック検索</h2>
+	<h3>Reddit検索</h3>
+	<form action="https://www.reddit.com/search">
+		<input type="text" name="q">
+		<button>Reddit検索</button>
+	</form>
+	<h3>Google検索</h3>
+	<form action="https://www.google.com/search">
+		<input type="text" name="q">
+		<button>Google検索</button>
+	</form>
+	<h3>Youtube検索</h3>
+	<form action="https://www.youtube.com/results">
+		<input type="text" name="search_query">
+		<button>Youtube検索</button>
 	</form>
 </body>
 
