--- a/03_HTML_Forms_Tables/forms2.html
+++ b/03_HTML_Forms_Tables/forms2.html
@@ -39,16 +39,6 @@
 		<input type="text" name="q">
 		<button>Reddit検索</button>
 	</form>
-	<h3>Google検索</h3>
-	<form action="https://www.google.com/search">
-		<input type="text" name="q">
-		<button>Google検索</button>
-	</form>
-	<h3>Youtube検索</h3>
-	<form action="https://www.youtube.com/results">
-		<input type="text" name="search_query">
-		<button>Youtube検索</button>
-	</form>
 
 	<h2>続・input！！！</h2>
 	<form action="/birds">
@@ -84,6 +74,21 @@
 			<textarea id="comments" rows="5" cols="40" placeholder="コメントを入力してください"></textarea>
 		</p>
 
+		<button>送信</button>
+	</form>
+
+	<h2>バリデーション</h2>
+	<form action="/dummy">
+		<label for="first">名前：</label>
+		<input type="text" id="first" name="first" required>
+		<p>
+			<label for="username">ユーザー名：</label>
+			<input type="text" id="username" name="username" minlength="5" maxlength="20" required>
+		</p>
+		<p>
+			<input type="email" required>
+			<input type="url" required>
+		</p>
 		<button>送信</button>
 	</form>
 </body>
