add: 外部CSS - color, background-color

--- a/06_CSS_Intro/index.html
+++ b/06_CSS_Intro/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CSS入門</title>
-	<!-- <style>
-		h2 {
-			color: palevioletred;
-		}
-	</style> -->
+	<link rel="stylesheet" href="app.css">
 </head>
+
 <body>
-	<!--インラインスタイル：非推奨！-->
-	<!-- <h1 style="color: purple">Hello World</h1>
-	<button style="background-color: palegreen;">わたしはボタン</button>
-	<button style="background-color: palegreen;">もう1つのボタン</button> -->
+	<h1>CSS入門</h1>
 
 	<h2>私はh2です</h2>
 	<h2>私はh2です</h2>
-	<h2>私はh2です</h2>
+	<button>ボタン1</button>
+	<button>ボタン2</button>
+	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam commodi provident quidem minima, nulla cum
+		tenetur iusto eaque ipsa, ad velit odit cupiditate aspernatur reiciendis dolores inventore, placeat
+		exercitationem nemo.
+		Ipsum nostrum tempore dolor distinctio officiis magni atque inventore, esse suscipit dolores autem sed eligendi
+		quidem, nemo pariatur ut ipsam. Iusto, quidem voluptatem sunt iste voluptate at nobis cum quas.
+		Atque similique cumque quo eveniet. Quod, mollitia ex in at itaque reiciendis aliquid libero iusto vero facilis
+		dolorem voluptatem sequi voluptatibus, architecto praesentium laudantium amet ut iure, labore obcaecati et.</p>
 </body>
+
 </html>
