--- a/06_CSS_Intro/index.html
+++ b/06_CSS_Intro/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-	<h1>CSS入門</h1>
+	<h1>CSS Introduction</h1>
 
 	<h2>私はh2です</h2>
 	<h2>私はh2です</h2>
 	<button>ボタン1</button>
 	<button>ボタン2</button>
-	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam commodi provident quidem minima, nulla cum
+	<p>Lorem ipsum <a href="#">dolor</a> sit amet consectetur, adipisicing elit. Aperiam commodi provident quidem minima, nulla cum
 		tenetur iusto eaque ipsa, ad velit odit cupiditate aspernatur reiciendis dolores inventore, placeat
 		exercitationem nemo.
 		Ipsum nostrum tempore dolor distinctio officiis magni atque inventore, esse suscipit dolores autem sed eligendi
