--- a/07_CSS_Selectors/starter.html
+++ b/07_CSS_Selectors/starter.html
@@ -12,6 +12,12 @@
 	<nav>
 		<label for="search">Search</label>
 		<input type="text" placeholder="search" id="search">
+		<input type="checkbox" name="" id="check">
+		<label for="check" id="check-label">チェックボックス</label>
+		<input type="radio" name="radio" id="radio1">
+		<label for="radio1" id="radio-label">ラジオボタン1</label>
+		<input type="radio" name="radio" id="radio2">
+		<label for="radio2" id="radio-label">ラジオボタン2</label>
 		<input type="password" placeholder="password" name="" id="">
 		<button>Log In</button>
 		<button id="signup">Sign Up</button>
