ad順位-カスケード、詳細度

--- a/07_CSS_Selectors/starter.html
+++ b/07_CSS_Selectors/starter.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CSS Selectors</title>
 	<link rel="stylesheet" href="app.css">
+	<!-- カスケードの例。複数のCSSで競合がある場合、後で読み込まれた方が適用される -->
+	<link rel="stylesheet" href="more_styles.css">
 </head>
 
 <body>
