--- a/07_CSS_Selectors/starter.html
+++ b/07_CSS_Selectors/starter.html
@@ -22,7 +22,9 @@
 		<label for="radio2" id="radio-label">ラジオボタン2</label>
 		<input type="password" placeholder="password" name="" id="">
 		<button>Log In</button>
-		<button id="signup">Sign Up</button>
+
+		<!-- 下記のようにCSSをインライン式で書くと、IDセレクタよりも詳細度は高く最優先されるが非推奨-->
+		<button id="signup" style="color: coral;">Sign Up</button>
 	</nav>
 	<main>
 		<h1>Popular Posts</h1>
